# rag_from_scratch

./: .gitignore  README.md  main.py  pyproject.toml
rag/: __init__.py  config.py  database.py  indexer.py  llm_config.py  loader.py  querying.py  schemas.py
tests/: indexer.py  llm_config.py  test_config.py  test_indexer.py  test_loader.py
