[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "pypdf>=5.8.0",
]

[tool.setuptools]
packages = ["rag"]