[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.14",
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "pypdf>=5.8.0",
    "pystemmer>=3.0.0",
    "pytest>=8.4.1",
    "stemmer>=0.0.4",
]

[tool.setuptools]
packages = ["rag"]
